syntax = "proto3";

package DaemonRPC;

service  ServerService {
    rpc HandShake(HandShakeRequest) returns (DaemonInfo) {}
    rpc UpdateTorrentStatus(UpdateTorrentStatusRequest) returns (BaseResponse) {}
}

service ClientService {
    rpc GenerateTorrent(GenerateTorrentRequest) returns (TorrentInfo) {}
    rpc UpdateTorrentStatus(TorrentInfo) returns (BaseResponse) {}
    rpc DownloadTorrent(TorrentInfo) returns (BaseResponse) {}
}

message HandShakeRequest {
    string uuid = 1;
}

message DaemonInfo {
    string uuid = 1;
    string authTocken = 2;
}

message TorrentInfo {
    string id = 1;
    string link = 2;
    string path = 3;
    enum Status {
        NONE = 0;
        DOWNLOADED = 1;
        DOWNLOADING = 2;
        GENERATED = 3;
        GENERATING = 4;
        PAUSED = 5;
        ERROR = 6;
    }
    Status status = 4;
}

message GenerateTorrentRequest {
    string dir = 1;
}

message UpdateTorrentStatusRequest {
    DaemonInfo agentInfo = 1;
    TorrentInfo torrentInfo = 2;
}

message BaseResponse {
    string error_code = 1;
}
